--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery - Neem Karori Baba Gau Seva</title>
+    <title>Blog & News - Neem Karori Baba Gau Seva</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -18,7 +18,7 @@
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="about.html" class="nav-link">About</a>
                 <a href="programs.html" class="nav-link">Programs</a>
-                <a href="gallery.html" class="nav-link active">Gallery</a>
+                <a href="gallery.html" class="nav-link">Gallery</a>
                 <a href="contact.html" class="nav-link">Contact</a>
                 <a href="donate.html" class="nav-donate">Donate Now</a>
             </nav>
@@ -31,108 +31,149 @@
     </header>
 
     <!-- Page Header -->
-    <section class="page-header" style="background: linear-gradient(135deg, rgba(94, 47, 13, 0.7) 0%, rgba(230, 138, 0, 0.7) 100%), url('https://images.unsplash.com/photo-1567427181208-d0055ad1e71e?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80'); background-size: cover; background-position: center;">
+    <section class="page-header" style="background: linear-gradient(135deg, rgba(94, 47, 13, 0.7) 0%, rgba(230, 138, 0, 0.7) 100%), url('https://images.unsplash.com/photo-1504279087293-37898f17275b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80'); background-size: cover; background-position: center;">
         <div class="page-header-content">
-            <h1>Our Gallery</h1>
-            <p>Meet Our Sacred Cows & See Our Work</p>
+            <h1>Blog & News</h1>
+            <p>Stories, Updates & Articles about Gau Seva</p>
         </div>
     </section>
 
-    <!-- Gallery Section -->
-    <section class="gallery-section">
-        <div class="gallery-container">
-            <h2 class="section-title">Photo Stories</h2>
-            
-            <div class="gallery-grid">
-                <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1564760055-f694f09a8be8?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Sacred Cows">
-                    <div class="gallery-overlay">
-                        <h3>Our Sacred Cows</h3>
-                        <p>Living peacefully in our sanctuary</p>
+    <!-- Blog Section -->
+    <section class="blog-section">
+        <div class="blog-container">
+            <!-- Featured Article -->
+            <div class="featured-article">
+                <div class="featured-image">
+                    <img src="https://images.unsplash.com/photo-1500595046891-faf3b6838b09?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Featured Article">
+                </div>
+                <div class="featured-content">
+                    <span class="article-tag featured-tag">Featured</span>
+                    <h2>The Spiritual Significance of Cows in Hindu Philosophy</h2>
+                    <p class="article-excerpt">Explore the deep spiritual roots of cow protection in Hinduism and how Gau Seva has become a modern path to spiritual enlightenment.</p>
+                    <div class="article-meta">
+                        <span class="article-date">June 15, 2025</span>
+                        <span class="article-author">By Swami Anand</span>
+                        <span class="article-read-time">8 min read</span>
                     </div>
-                </div>
-
-                <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1567427181208-d0055ad1e71e?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Veterinary Care">
-                    <div class="gallery-overlay">
-                        <h3>Medical Care</h3>
-                        <p>24/7 veterinary support</p>
-                    </div>
-                </div>
-
-                <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Fresh Food">
-                    <div class="gallery-overlay">
-                        <h3>Organic Fodder</h3>
-                        <p>Fresh, nutritious meals daily</p>
-                    </div>
-                </div>
-
-                <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1516521318423-f06f70570ec0?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Rescued Cows">
-                    <div class="gallery-overlay">
-                        <h3>Rescue Stories</h3>
-                        <p>From streets to sanctuary</p>
-                    </div>
-                </div>
-
-                <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1549887534-f0e0d51c1ae5?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Relaxing Cows">
-                    <div class="gallery-overlay">
-                        <h3>Happy & Healthy</h3>
-                        <p>Cows enjoying their sanctuary</p>
-                    </div>
-                </div>
-
-                <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1582353865267-a97f08f97cf1?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Community">
-                    <div class="gallery-overlay">
-                        <h3>Our Community</h3>
-                        <p>Volunteers dedicated to serving</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Rescue Stories -->
-    <section class="stories-section">
-        <h2 class="section-title">Rescue Stories</h2>
-        <div class="stories-grid">
-            <div class="story-card">
-                <div class="story-image">
-                    <img src="https://images.unsplash.com/photo-1564760055-f694f09a8be8?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Gauri">
-                </div>
-                <div class="story-content">
-                    <h3>Gauri's Journey</h3>
-                    <p><strong>Found:</strong> Abandoned on the streets with injuries</p>
-                    <p><strong>Story:</strong> Gauri was rescued from the busy roads of Noida in critical condition. After 3 months of intensive veterinary care, she has fully recovered and now enjoys peaceful days in our sanctuary.</p>
-                    <span class="story-tag">Rescue Success</span>
+                    <a href="#" class="read-more-btn">Read Full Article</a>
                 </div>
             </div>
 
-            <div class="story-card">
-                <div class="story-image">
-                    <img src="https://images.unsplash.com/photo-1567427181208-d0055ad1e71e?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Radha">
-                </div>
-                <div class="story-content">
-                    <h3>Radha's Recovery</h3>
-                    <p><strong>Found:</strong> Injured with a broken leg</p>
-                    <p><strong>Story:</strong> Radha arrived unable to walk. Our veterinarians performed surgery and provided months of rehabilitation. Today, she runs and plays with other cows.</p>
-                    <span class="story-tag">Medical Success</span>
-                </div>
-            </div>
+            <!-- Articles Grid -->
+            <div class="articles-grid">
+                <!-- Article 1 -->
+                <article class="blog-card">
+                    <div class="blog-image">
+                        <img src="https://images.unsplash.com/photo-1484406566174-9da000fda645?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Cow Rescue">
+                    </div>
+                    <div class="blog-content">
+                        <div class="blog-header">
+                            <span class="article-tag rescue-tag">Rescue Story</span>
+                            <span class="article-date-small">June 10, 2025</span>
+                        </div>
+                        <h3><a href="#">Lakshmi's Journey: From Street to Sanctuary</a></h3>
+                        <p>Read the inspiring story of Lakshmi, a cow rescued from abandonment who now lives happily in our sanctuary.</p>
+                        <div class="blog-footer">
+                            <span class="read-time">6 min</span>
+                            <a href="#" class="read-link">Read More →</a>
+                        </div>
+                    </div>
+                </article>
 
-            <div class="story-card">
-                <div class="story-image">
-                    <img src="https://images.unsplash.com/photo-1549887534-f0e0d51c1ae5?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Lakshmi">
-                </div>
-                <div class="story-content">
-                    <h3>Lakshmi's New Life</h3>
-                    <p><strong>Found:</strong> Malnourished and neglected</p>
-                    <p><strong>Story:</strong> Lakshmi was severely malnourished when rescued. With proper nutrition and care, she has transformed into a healthy, energetic cow loved by all.</p>
-                    <span class="story-tag">Care & Love</span>
-                </div>
+                <!-- Article 2 -->
+                <article class="blog-card">
+                    <div class="blog-image">
+                        <img src="https://images.unsplash.com/photo-1542686189-a6d1df72f2a3?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Medical Care">
+                    </div>
+                    <div class="blog-content">
+                        <div class="blog-header">
+                            <span class="article-tag medical-tag">Health & Care</span>
+                            <span class="article-date-small">June 8, 2025</span>
+                        </div>
+                        <h3><a href="#">Advanced Veterinary Procedures at Gau Seva</a></h3>
+                        <p>Our veterinary team performs complex surgeries and treatments to ensure the health of every cow in our care.</p>
+                        <div class="blog-footer">
+                            <span class="read-time">5 min</span>
+                            <a href="#" class="read-link">Read More →</a>
+                        </div>
+                    </div>
+                </article>
+
+                <!-- Article 3 -->
+                <article class="blog-card">
+                    <div class="blog-image">
+                        <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Community">
+                    </div>
+                    <div class="blog-content">
+                        <div class="blog-header">
+                            <span class="article-tag community-tag">Community</span>
+                            <span class="article-date-small">June 5, 2025</span>
+                        </div>
+                        <h3><a href="#">Volunteer Appreciation: Stories of Dedication</a></h3>
+                        <p>Meet the amazing volunteers who dedicate their time and energy to the welfare of our cows.</p>
+                        <div class="blog-footer">
+                            <span class="read-time">7 min</span>
+                            <a href="#" class="read-link">Read More →</a>
+                        </div>
+                    </div>
+                </article>
+
+                <!-- Article 4 -->
+                <article class="blog-card">
+                    <div class="blog-image">
+                        <img src="https://images.unsplash.com/photo-1559027615-cd4628902d4a?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Nutrition">
+                    </div>
+                    <div class="blog-content">
+                        <div class="blog-header">
+                            <span class="article-tag nutrition-tag">Nutrition</span>
+                            <span class="article-date-small">May 30, 2025</span>
+                        </div>
+                        <h3><a href="#">Organic Nutrition Plan for Cow Wellness</a></h3>
+                        <p>Discover how our organic feed and nutrition program ensures optimal health for all sanctuary cows.</p>
+                        <div class="blog-footer">
+                            <span class="read-time">6 min</span>
+                            <a href="#" class="read-link">Read More →</a>
+                        </div>
+                    </div>
+                </article>
+
+                <!-- Article 5 -->
+                <article class="blog-card">
+                    <div class="blog-image">
+                        <img src="https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Events">
+                    </div>
+                    <div class="blog-content">
+                        <div class="blog-header">
+                            <span class="article-tag event-tag">Events</span>
+                            <span class="article-date-small">May 25, 2025</span>
+                        </div>
+                        <h3><a href="#">Annual Gau Seva Mela: A Success!</a></h3>
+                        <p>Thousands gathered at our annual event to celebrate cow protection and community engagement.</p>
+                        <div class="blog-footer">
+                            <span class="read-time">5 min</span>
+                            <a href="#" class="read-link">Read More →</a>
+                        </div>
+                    </div>
+                </article>
+
+                <!-- Article 6 -->
+                <article class="blog-card">
+                    <div class="blog-image">
+                        <img src="https://images.unsplash.com/photo-1507238691726-db8b60191c16?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Education">
+                    </div>
+                    <div class="blog-content">
+                        <div class="blog-header">
+                            <span class="article-tag education-tag">Education</span>
+                            <span class="article-date-small">May 20, 2025</span>
+                        </div>
+                        <h3><a href="#">School Programs: Teaching Compassion to Youth</a></h3>
+                        <p>Our educational initiatives reach thousands of students, fostering compassion towards animals.</p>
+                        <div class="blog-footer">
+                            <span class="read-time">7 min</span>
+                            <a href="#" class="read-link">Read More →</a>
+                        </div>
+                    </div>
+                </article>
             </div>
         </div>
     </section>
@@ -169,7 +210,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="gallery.html">Our Gallery</a></li>
+                    <li><a href="programs.html">Our Programs</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
