--- a/impact-reports.html
+++ b/impact-reports.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery - Neem Karori Baba Gau Seva</title>
+    <title>Impact Reports - Neem Karori Baba Gau Seva</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -18,7 +18,7 @@
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="about.html" class="nav-link">About</a>
                 <a href="programs.html" class="nav-link">Programs</a>
-                <a href="gallery.html" class="nav-link active">Gallery</a>
+                <a href="gallery.html" class="nav-link">Gallery</a>
                 <a href="contact.html" class="nav-link">Contact</a>
                 <a href="donate.html" class="nav-donate">Donate Now</a>
             </nav>
@@ -31,107 +31,181 @@
     </header>
 
     <!-- Page Header -->
-    <section class="page-header" style="background: linear-gradient(135deg, rgba(94, 47, 13, 0.7) 0%, rgba(230, 138, 0, 0.7) 100%), url('https://images.unsplash.com/photo-1567427181208-d0055ad1e71e?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80'); background-size: cover; background-position: center;">
+    <section class="page-header" style="background: linear-gradient(135deg, rgba(94, 47, 13, 0.7) 0%, rgba(230, 138, 0, 0.7) 100%), url('https://images.unsplash.com/photo-1454496522488-7a8e488e8606?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80'); background-size: cover; background-position: center;">
         <div class="page-header-content">
-            <h1>Our Gallery</h1>
-            <p>Meet Our Sacred Cows & See Our Work</p>
+            <h1>Impact Reports</h1>
+            <p>Transparency & Accountability in Gau Seva</p>
         </div>
     </section>
 
-    <!-- Gallery Section -->
-    <section class="gallery-section">
-        <div class="gallery-container">
-            <h2 class="section-title">Photo Stories</h2>
-            
-            <div class="gallery-grid">
-                <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1564760055-f694f09a8be8?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Sacred Cows">
-                    <div class="gallery-overlay">
-                        <h3>Our Sacred Cows</h3>
-                        <p>Living peacefully in our sanctuary</p>
-                    </div>
-                </div>
+    <!-- Reports Section -->
+    <section class="reports-section">
+        <div class="reports-container">
+            <h2 class="section-title">Our Annual Impact</h2>
+            <p class="section-subtitle">Detailed reports on our activities, finances, and impact achieved</p>
 
-                <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1567427181208-d0055ad1e71e?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Veterinary Care">
-                    <div class="gallery-overlay">
-                        <h3>Medical Care</h3>
-                        <p>24/7 veterinary support</p>
+            <!-- Download Section -->
+            <div class="download-section">
+                <h3 class="download-title">Download Full Reports</h3>
+                <div class="reports-download-grid">
+                    <div class="report-item">
+                        <span class="report-icon">📊</span>
+                        <h4>Annual Report 2025</h4>
+                        <p>Complete financial and activity report</p>
+                        <a href="#" class="download-btn">Download PDF</a>
                     </div>
-                </div>
-
-                <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Fresh Food">
-                    <div class="gallery-overlay">
-                        <h3>Organic Fodder</h3>
-                        <p>Fresh, nutritious meals daily</p>
+                    <div class="report-item">
+                        <span class="report-icon">💰</span>
+                        <h4>Financial Report 2024-25</h4>
+                        <p>Detailed financial breakdown and audit</p>
+                        <a href="#" class="download-btn">Download PDF</a>
                     </div>
-                </div>
-
-                <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1516521318423-f06f70570ec0?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Rescued Cows">
-                    <div class="gallery-overlay">
-                        <h3>Rescue Stories</h3>
-                        <p>From streets to sanctuary</p>
+                    <div class="report-item">
+                        <span class="report-icon">📈</span>
+                        <h4>Impact Analysis 2025</h4>
+                        <p>Detailed impact metrics and analysis</p>
+                        <a href="#" class="download-btn">Download PDF</a>
                     </div>
-                </div>
-
-                <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1549887534-f0e0d51c1ae5?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Relaxing Cows">
-                    <div class="gallery-overlay">
-                        <h3>Happy & Healthy</h3>
-                        <p>Cows enjoying their sanctuary</p>
-                    </div>
-                </div>
-
-                <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1582353865267-a97f08f97cf1?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Community">
-                    <div class="gallery-overlay">
-                        <h3>Our Community</h3>
-                        <p>Volunteers dedicated to serving</p>
+                    <div class="report-item">
+                        <span class="report-icon">🎯</span>
+                        <h4>Strategic Plan 2025-2027</h4>
+                        <p>Our vision and 3-year strategic goals</p>
+                        <a href="#" class="download-btn">Download PDF</a>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
 
-    <!-- Rescue Stories -->
-    <section class="stories-section">
-        <h2 class="section-title">Rescue Stories</h2>
-        <div class="stories-grid">
-            <div class="story-card">
-                <div class="story-image">
-                    <img src="https://images.unsplash.com/photo-1564760055-f694f09a8be8?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Gauri">
-                </div>
-                <div class="story-content">
-                    <h3>Gauri's Journey</h3>
-                    <p><strong>Found:</strong> Abandoned on the streets with injuries</p>
-                    <p><strong>Story:</strong> Gauri was rescued from the busy roads of Noida in critical condition. After 3 months of intensive veterinary care, she has fully recovered and now enjoys peaceful days in our sanctuary.</p>
-                    <span class="story-tag">Rescue Success</span>
+            <!-- Key Metrics -->
+            <div class="metrics-section">
+                <h3 class="metrics-title">Key Metrics (2025)</h3>
+                <div class="metrics-grid">
+                    <div class="metric-card">
+                        <h4>Cows in Sanctuary</h4>
+                        <p class="metric-value">1,500+</p>
+                        <div class="metric-progress">
+                            <div class="progress-bar" style="width: 75%"></div>
+                        </div>
+                        <p class="metric-note">Capacity: 2000 cows</p>
+                    </div>
+                    <div class="metric-card">
+                        <h4>Medical Treatments</h4>
+                        <p class="metric-value">10,000+</p>
+                        <div class="metric-progress">
+                            <div class="progress-bar" style="width: 85%"></div>
+                        </div>
+                        <p class="metric-note">Annual target: 12,000</p>
+                    </div>
+                    <div class="metric-card">
+                        <h4>Community Beneficiaries</h4>
+                        <p class="metric-value">50,000+</p>
+                        <div class="metric-progress">
+                            <div class="progress-bar" style="width: 90%"></div>
+                        </div>
+                        <p class="metric-note">Education & Awareness</p>
+                    </div>
+                    <div class="metric-card">
+                        <h4>Daily Donors</h4>
+                        <p class="metric-value">500+</p>
+                        <div class="metric-progress">
+                            <div class="progress-bar" style="width: 70%"></div>
+                        </div>
+                        <p class="metric-note">Active supporters</p>
+                    </div>
                 </div>
             </div>
 
-            <div class="story-card">
-                <div class="story-image">
-                    <img src="https://images.unsplash.com/photo-1567427181208-d0055ad1e71e?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Radha">
-                </div>
-                <div class="story-content">
-                    <h3>Radha's Recovery</h3>
-                    <p><strong>Found:</strong> Injured with a broken leg</p>
-                    <p><strong>Story:</strong> Radha arrived unable to walk. Our veterinarians performed surgery and provided months of rehabilitation. Today, she runs and plays with other cows.</p>
-                    <span class="story-tag">Medical Success</span>
+            <!-- Monthly Reports -->
+            <div class="monthly-reports">
+                <h3 class="reports-title">Monthly Reports 2025</h3>
+                <div class="reports-table-container">
+                    <table class="reports-table">
+                        <thead>
+                            <tr>
+                                <th>Month</th>
+                                <th>Funds Raised</th>
+                                <th>Medical Treatments</th>
+                                <th>Cows Rescued</th>
+                                <th>Report</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>January 2025</td>
+                                <td>₹3,50,000</td>
+                                <td>850</td>
+                                <td>12</td>
+                                <td><a href="#" class="report-link">View</a></td>
+                            </tr>
+                            <tr>
+                                <td>February 2025</td>
+                                <td>₹3,75,000</td>
+                                <td>875</td>
+                                <td>15</td>
+                                <td><a href="#" class="report-link">View</a></td>
+                            </tr>
+                            <tr>
+                                <td>March 2025</td>
+                                <td>₹4,25,000</td>
+                                <td>920</td>
+                                <td>18</td>
+                                <td><a href="#" class="report-link">View</a></td>
+                            </tr>
+                            <tr>
+                                <td>April 2025</td>
+                                <td>₹3,90,000</td>
+                                <td>895</td>
+                                <td>14</td>
+                                <td><a href="#" class="report-link">View</a></td>
+                            </tr>
+                            <tr>
+                                <td>May 2025</td>
+                                <td>₹4,10,000</td>
+                                <td>910</td>
+                                <td>16</td>
+                                <td><a href="#" class="report-link">View</a></td>
+                            </tr>
+                            <tr>
+                                <td>June 2025</td>
+                                <td>₹5,20,000</td>
+                                <td>980</td>
+                                <td>22</td>
+                                <td><a href="#" class="report-link">View</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
 
-            <div class="story-card">
-                <div class="story-image">
-                    <img src="https://images.unsplash.com/photo-1549887534-f0e0d51c1ae5?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Lakshmi">
-                </div>
-                <div class="story-content">
-                    <h3>Lakshmi's New Life</h3>
-                    <p><strong>Found:</strong> Malnourished and neglected</p>
-                    <p><strong>Story:</strong> Lakshmi was severely malnourished when rescued. With proper nutrition and care, she has transformed into a healthy, energetic cow loved by all.</p>
-                    <span class="story-tag">Care & Love</span>
+            <!-- Financial Breakdown -->
+            <div class="financial-breakdown">
+                <h3 class="breakdown-title">Fund Allocation 2025</h3>
+                <div class="breakdown-content">
+                    <div class="breakdown-chart">
+                        <div class="pie-chart">
+                            <div class="pie-section medical" style="--percent: 35;"></div>
+                            <div class="pie-section food" style="--percent: 30;"></div>
+                            <div class="pie-section shelter" style="--percent: 20;"></div>
+                            <div class="pie-section admin" style="--percent: 15;"></div>
+                        </div>
+                    </div>
+                    <div class="breakdown-legend">
+                        <div class="legend-item">
+                            <span class="legend-color medical"></span>
+                            <span>Medical Care (35%)</span>
+                        </div>
+                        <div class="legend-item">
+                            <span class="legend-color food"></span>
+                            <span>Food & Nutrition (30%)</span>
+                        </div>
+                        <div class="legend-item">
+                            <span class="legend-color shelter"></span>
+                            <span>Shelter & Infrastructure (20%)</span>
+                        </div>
+                        <div class="legend-item">
+                            <span class="legend-color admin"></span>
+                            <span>Administrative (15%)</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -169,7 +243,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="gallery.html">Our Gallery</a></li>
+                    <li><a href="programs.html">Our Programs</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
