--- a/programs.html
+++ b/programs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery - Neem Karori Baba Gau Seva</title>
+    <title>Our Programs - Neem Karori Baba Gau Seva</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -17,8 +17,8 @@
             <nav class="navbar-menu">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="about.html" class="nav-link">About</a>
-                <a href="programs.html" class="nav-link">Programs</a>
-                <a href="gallery.html" class="nav-link active">Gallery</a>
+                <a href="programs.html" class="nav-link active">Programs</a>
+                <a href="gallery.html" class="nav-link">Gallery</a>
                 <a href="contact.html" class="nav-link">Contact</a>
                 <a href="donate.html" class="nav-donate">Donate Now</a>
             </nav>
@@ -31,107 +31,149 @@
     </header>
 
     <!-- Page Header -->
-    <section class="page-header" style="background: linear-gradient(135deg, rgba(94, 47, 13, 0.7) 0%, rgba(230, 138, 0, 0.7) 100%), url('https://images.unsplash.com/photo-1567427181208-d0055ad1e71e?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80'); background-size: cover; background-position: center;">
+    <section class="page-header" style="background: linear-gradient(135deg, rgba(94, 47, 13, 0.7) 0%, rgba(230, 138, 0, 0.7) 100%), url('https://images.unsplash.com/photo-1564760055-f694f09a8be8?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80'); background-size: cover; background-position: center;">
         <div class="page-header-content">
-            <h1>Our Gallery</h1>
-            <p>Meet Our Sacred Cows & See Our Work</p>
+            <h1>Our Programs</h1>
+            <p>Comprehensive Care & Protection for Sacred Cows</p>
         </div>
     </section>
 
-    <!-- Gallery Section -->
-    <section class="gallery-section">
-        <div class="gallery-container">
-            <h2 class="section-title">Photo Stories</h2>
-            
-            <div class="gallery-grid">
-                <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1564760055-f694f09a8be8?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Sacred Cows">
-                    <div class="gallery-overlay">
-                        <h3>Our Sacred Cows</h3>
-                        <p>Living peacefully in our sanctuary</p>
+    <!-- Programs Section -->
+    <section class="programs-section">
+        <div class="programs-container">
+            <h2 class="section-title">What We Do</h2>
+            <p class="section-subtitle">Our comprehensive programs ensure complete care for rescued and sanctuary cows</p>
+
+            <div class="programs-grid">
+                <!-- Rescue Program -->
+                <div class="program-card">
+                    <div class="program-icon">🚑</div>
+                    <h3>Rescue & Rehabilitation</h3>
+                    <p class="program-description">We rescue abandoned, injured, and neglected cows from streets and provide intensive rehabilitation.</p>
+                    <ul class="program-features">
+                        <li>24/7 emergency rescue hotline</li>
+                        <li>Medical treatment and surgery</li>
+                        <li>Rehabilitation programs (3-6 months)</li>
+                        <li>Behavioral assessment</li>
+                        <li>GPS tracking for rescue operations</li>
+                    </ul>
+                    <div class="program-impact">
+                        <strong>500+ Cows Rescued</strong>
                     </div>
                 </div>
 
-                <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1567427181208-d0055ad1e71e?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Veterinary Care">
-                    <div class="gallery-overlay">
-                        <h3>Medical Care</h3>
-                        <p>24/7 veterinary support</p>
+                <!-- Nutrition Program -->
+                <div class="program-card">
+                    <div class="program-icon">🌾</div>
+                    <h3>Nutrition & Feed Management</h3>
+                    <p class="program-description">We provide organic, nutritious feed sourced from our own farms to ensure optimal health.</p>
+                    <ul class="program-features">
+                        <li>Organic green fodder daily</li>
+                        <li>Custom mineral supplements</li>
+                        <li>Seasonal feed rotation</li>
+                        <li>Veterinary nutritionist guidance</li>
+                        <li>Panchagavya production</li>
+                    </ul>
+                    <div class="program-impact">
+                        <strong>2,000+ Cows Fed Daily</strong>
                     </div>
                 </div>
 
-                <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Fresh Food">
-                    <div class="gallery-overlay">
-                        <h3>Organic Fodder</h3>
-                        <p>Fresh, nutritious meals daily</p>
+                <!-- Medical Program -->
+                <div class="program-card">
+                    <div class="program-icon">⚕️</div>
+                    <h3>Medical & Veterinary Care</h3>
+                    <p class="program-description">Full-time veterinary team providing comprehensive health care and emergency treatment.</p>
+                    <ul class="program-features">
+                        <li>24/7 veterinary services</li>
+                        <li>Surgery and anesthesia</li>
+                        <li>Disease prevention programs</li>
+                        <li>Vaccination drives</li>
+                        <li>Blood testing & diagnostics</li>
+                    </ul>
+                    <div class="program-impact">
+                        <strong>10,000+ Treatments/Year</strong>
                     </div>
                 </div>
 
-                <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1516521318423-f06f70570ec0?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Rescued Cows">
-                    <div class="gallery-overlay">
-                        <h3>Rescue Stories</h3>
-                        <p>From streets to sanctuary</p>
+                <!-- Sanctuary Program -->
+                <div class="program-card">
+                    <div class="program-icon">🏠</div>
+                    <h3>Sanctuary & Shelter</h3>
+                    <p class="program-description">Safe, comfortable housing in our sprawling sanctuary across 50 acres of land.</p>
+                    <ul class="program-features">
+                        <li>Climate-controlled shelters</li>
+                        <li>Water troughs & bathing areas</li>
+                        <li>Grazing pastures</li>
+                        <li>24/7 security</li>
+                        <li>Comfortable bedding systems</li>
+                    </ul>
+                    <div class="program-impact">
+                        <strong>1,500+ Cows Housed</strong>
                     </div>
                 </div>
 
-                <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1549887534-f0e0d51c1ae5?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Relaxing Cows">
-                    <div class="gallery-overlay">
-                        <h3>Happy & Healthy</h3>
-                        <p>Cows enjoying their sanctuary</p>
+                <!-- Education Program -->
+                <div class="program-card">
+                    <div class="program-icon">📚</div>
+                    <h3>Education & Awareness</h3>
+                    <p class="program-description">Community programs to promote understanding of cow care and animal welfare.</p>
+                    <ul class="program-features">
+                        <li>School and college visits</li>
+                        <li>Documentary screenings</li>
+                        <li>Workshop programs</li>
+                        <li>Online courses</li>
+                        <li>Printed materials distribution</li>
+                    </ul>
+                    <div class="program-impact">
+                        <strong>50,000+ People Educated</strong>
                     </div>
                 </div>
 
-                <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1582353865267-a97f08f97cf1?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Community">
-                    <div class="gallery-overlay">
-                        <h3>Our Community</h3>
-                        <p>Volunteers dedicated to serving</p>
+                <!-- Sponsorship Program -->
+                <div class="program-card">
+                    <div class="program-icon">💝</div>
+                    <h3>Cow Sponsorship Program</h3>
+                    <p class="program-description">Become a guardian for a cow with regular updates, photos, and impact reports.</p>
+                    <ul class="program-features">
+                        <li>Monthly care packages</li>
+                        <li>Photo & video updates</li>
+                        <li>Personalized adoption certificate</li>
+                        <li>Impact reports</li>
+                        <li>Lifetime support</li>
+                    </ul>
+                    <div class="program-impact">
+                        <strong>500+ Active Sponsors</strong>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Rescue Stories -->
-    <section class="stories-section">
-        <h2 class="section-title">Rescue Stories</h2>
-        <div class="stories-grid">
-            <div class="story-card">
-                <div class="story-image">
-                    <img src="https://images.unsplash.com/photo-1564760055-f694f09a8be8?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Gauri">
+    <!-- Impact Stats Section -->
+    <section class="impact-stats-section">
+        <div class="impact-stats-container">
+            <h2 class="section-title">Our Impact</h2>
+            <div class="impact-stats-grid">
+                <div class="impact-stat">
+                    <h3 class="stat-number">500+</h3>
+                    <p class="stat-label">Cows Rescued</p>
+                    <p class="stat-description">From streets and abandonment</p>
                 </div>
-                <div class="story-content">
-                    <h3>Gauri's Journey</h3>
-                    <p><strong>Found:</strong> Abandoned on the streets with injuries</p>
-                    <p><strong>Story:</strong> Gauri was rescued from the busy roads of Noida in critical condition. After 3 months of intensive veterinary care, she has fully recovered and now enjoys peaceful days in our sanctuary.</p>
-                    <span class="story-tag">Rescue Success</span>
+                <div class="impact-stat">
+                    <h3 class="stat-number">1,500+</h3>
+                    <p class="stat-label">Living in Sanctuary</p>
+                    <p class="stat-description">Safe and cared for</p>
                 </div>
-            </div>
-
-            <div class="story-card">
-                <div class="story-image">
-                    <img src="https://images.unsplash.com/photo-1567427181208-d0055ad1e71e?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Radha">
+                <div class="impact-stat">
+                    <h3 class="stat-number">10,000+</h3>
+                    <p class="stat-label">Medical Treatments</p>
+                    <p class="stat-description">Annually administered</p>
                 </div>
-                <div class="story-content">
-                    <h3>Radha's Recovery</h3>
-                    <p><strong>Found:</strong> Injured with a broken leg</p>
-                    <p><strong>Story:</strong> Radha arrived unable to walk. Our veterinarians performed surgery and provided months of rehabilitation. Today, she runs and plays with other cows.</p>
-                    <span class="story-tag">Medical Success</span>
-                </div>
-            </div>
-
-            <div class="story-card">
-                <div class="story-image">
-                    <img src="https://images.unsplash.com/photo-1549887534-f0e0d51c1ae5?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Lakshmi">
-                </div>
-                <div class="story-content">
-                    <h3>Lakshmi's New Life</h3>
-                    <p><strong>Found:</strong> Malnourished and neglected</p>
-                    <p><strong>Story:</strong> Lakshmi was severely malnourished when rescued. With proper nutrition and care, she has transformed into a healthy, energetic cow loved by all.</p>
-                    <span class="story-tag">Care & Love</span>
+                <div class="impact-stat">
+                    <h3 class="stat-number">50,000+</h3>
+                    <p class="stat-label">Community Reached</p>
+                    <p class="stat-description">Through education programs</p>
                 </div>
             </div>
         </div>
@@ -169,7 +211,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="gallery.html">Our Gallery</a></li>
+                    <li><a href="programs.html">Our Programs</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
