--- a/about.html
+++ b/about.html
@@ -17,8 +17,7 @@
             <nav class="navbar-menu">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="about.html" class="nav-link active">About</a>
-                <a href="programs.html" class="nav-link">Programs</a>
-                <a href="gallery.html" class="nav-link">Gallery</a>
+                <a href="blog.html" class="nav-link">Blog</a>
                 <a href="contact.html" class="nav-link">Contact</a>
                 <a href="donate.html" class="nav-donate">Donate Now</a>
             </nav>
@@ -38,142 +37,84 @@
         </div>
     </section>
 
-    <!-- Our Story -->
-    <section class="about-section">
+    <!-- About Main -->
+    <section class="about-main">
         <div class="about-container">
-            <div class="about-text">
-                <h2>Our Story</h2>
-                <p>Neem Karori Baba Gau Seva, operating under Sammaan Foundation, is dedicated to the protection, welfare, and care of abandoned and injured cows in Greater Noida. Founded with the belief that cows hold a sacred place in Indian culture and society, our mission is to provide sanctuary for these gentle beings.</p>
-                <p>Every cow deserves dignity, love, and proper care. We rescue cows from the streets, provide medical treatment, nutritious food, and a safe home where they can live peacefully.</p>
+            <!-- A Sanctuary of Love Section -->
+            <div class="about-story">
+                <div class="story-content">
+                    <h2>A Sanctuary of Love</h2>
+                    <p>Neem Karori Baba Gau Seva is more than just a shelter—it's a place of love where we feed and care for our cows every day. Located in Noida, we provide fresh food and keep them healthy so they can live peacefully.</p>
+                    <p>These beautiful animals, who have been forgotten or hurt, now live with dignity thanks to kind people like you. By supporting our Gaushala, you're helping protect these holy creatures that mean so much in our culture. Imagine the joy of saving a life and feeling that warm glow in your heart.</p>
+                </div>
+                <div class="story-image">
+                    <img src="https://images.unsplash.com/photo-1567427175008-aac1b2e32c77?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Cows in Sanctuary">
+                </div>
             </div>
-            <div class="about-image">
-                <img src="https://images.unsplash.com/photo-1564760055-f694f09a8be8?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Sacred Cows">
+
+            <!-- Beyond Cow Care Section -->
+            <div class="beyond-care">
+                <h2>Beyond Cow Care</h2>
+                <p>Our work touches more lives, bringing hope to people who need it too. Hunger hurts so many people. With your help, we feed hundreds of families every day, giving them hope and strength. Your support turns sadness into happiness.</p>
+                <div class="beyond-image">
+                    <img src="https://images.unsplash.com/photo-1469571486292-0ba58a3f068b?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Community Service">
+                </div>
+            </div>
+
+            <!-- Commitments Section -->
+            <div class="commitments-section">
+                <h2>Our Commitments</h2>
+                <div class="commitments-grid">
+                    <div class="commitment-item">
+                        <span class="commitment-check">✓</span>
+                        <p>Rescue 500+ abandoned and native cows</p>
+                    </div>
+                    <div class="commitment-item">
+                        <span class="commitment-check">✓</span>
+                        <p>Feed hungry families and bring smiles</p>
+                    </div>
+                    <div class="commitment-item">
+                        <span class="commitment-check">✓</span>
+                        <p>Provide Tax benefits (80G) to donors</p>
+                    </div>
+                    <div class="commitment-item">
+                        <span class="commitment-check">✓</span>
+                        <p>Honoring our traditions and sharing love</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Team Section -->
+            <div class="team-section">
+                <h2>Dedicated Sevaks</h2>
+                <p class="team-subtitle">The hands that serve with love and devotion</p>
+                <div class="team-grid">
+                    <div class="team-member">
+                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Team Member">
+                        <h3>Sevak Name 1</h3>
+                        <p class="member-role">Volunteer</p>
+                    </div>
+                    <div class="team-member">
+                        <img src="https://images.unsplash.com/photo-1517841905240-5cae9a75f8fc?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Team Member">
+                        <h3>Sevak Name 2</h3>
+                        <p class="member-role">Volunteer</p>
+                    </div>
+                    <div class="team-member">
+                        <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Team Member">
+                        <h3>Sevak Name 3</h3>
+                        <p class="member-role">Volunteer</p>
+                    </div>
+                    <div class="team-member">
+                        <img src="https://images.unsplash.com/photo-1515886657613-9f3515b0c78f?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Team Member">
+                        <h3>Sevak Name 4</h3>
+                        <p class="member-role">Volunteer</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
-    <!-- Our Values -->
-    <section class="values-section">
-        <h2 class="section-title">Our Core Values</h2>
-        <div class="values-grid">
-            <div class="value-card">
-                <div class="value-icon">❤️</div>
-                <h3>Compassion</h3>
-                <p>We treat every cow with unconditional love and compassion, recognizing their sentience and value.</p>
-            </div>
-            <div class="value-card">
-                <div class="value-icon">🕉️</div>
-                <h3>Spirituality</h3>
-                <p>Our work is rooted in the sacred teachings of Indian culture where cows are revered as Gau Mata.</p>
-            </div>
-            <div class="value-card">
-                <div class="value-icon">🌱</div>
-                <h3>Sustainability</h3>
-                <p>We practice organic farming using Panchagavya for the health of our cows and the environment.</p>
-            </div>
-            <div class="value-card">
-                <div class="value-icon">🤝</div>
-                <h3>Community</h3>
-                <p>We believe in the power of collective action and community support for this noble cause.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- What We Do -->
-    <section class="what-we-do-section">
-        <h2 class="section-title">What We Do</h2>
-        <div class="services-grid">
-            <div class="service-card">
-                <div class="service-image">
-                    <img src="https://images.unsplash.com/photo-1564760055-f694f09a8be8?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Rescue & Shelter">
-                </div>
-                <h3>🐄 Rescue & Shelter</h3>
-                <p>We rescue abandoned and injured cows from the streets and provide them with safe shelter, clean water, and nutritious food.</p>
-            </div>
-            <div class="service-card">
-                <div class="service-image">
-                    <img src="https://images.unsplash.com/photo-1567427181208-d0055ad1e71e?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Medical Care">
-                </div>
-                <h3>⚕️ Medical Care</h3>
-                <p>24/7 veterinary care including emergency surgeries, treatments, and rehabilitation for injured animals.</p>
-            </div>
-            <div class="service-card">
-                <div class="service-image">
-                    <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Nutrition">
-                </div>
-                <h3>🌾 Nutrition</h3>
-                <p>We provide organic, nutritious fodder and specially prepared food to ensure optimal health for all our cows.</p>
-            </div>
-            <div class="service-card">
-                <div class="service-image">
-                    <img src="https://images.unsplash.com/photo-1582353865267-a97f08f97cf1?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Community Education">
-                </div>
-                <h3>👥 Community Education</h3>
-                <p>We conduct awareness programs about the importance of cow protection and sustainable animal welfare.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Team Section -->
-    <section class="team-section">
-        <h2 class="section-title">Meet Our Team</h2>
-        <p class="team-intro">Dedicated individuals working day and night for the welfare of our cows</p>
-        <div class="team-grid">
-            <div class="team-card">
-                <div class="team-image">
-                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Director">
-                </div>
-                <h3>Director</h3>
-                <p>Guiding our mission with passion and dedication</p>
-            </div>
-            <div class="team-card">
-                <div class="team-image">
-                    <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Veterinarian">
-                </div>
-                <h3>Veterinarian</h3>
-                <p>Providing expert medical care and treatment</p>
-            </div>
-            <div class="team-card">
-                <div class="team-image">
-                    <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Farm Manager">
-                </div>
-                <h3>Farm Manager</h3>
-                <p>Ensuring proper nutrition and farm operations</p>
-            </div>
-            <div class="team-card">
-                <div class="team-image">
-                    <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Community Coordinator">
-                </div>
-                <h3>Community Coordinator</h3>
-                <p>Building relationships and raising awareness</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Impact Stats -->
-    <section class="impact-section">
-        <h2 class="section-title">Our Impact</h2>
-        <div class="impact-grid">
-            <div class="impact-card">
-                <div class="impact-number">1500+</div>
-                <p>Cows Protected</p>
-            </div>
-            <div class="impact-card">
-                <div class="impact-number">500+</div>
-                <p>Injured Cows Treated</p>
-            </div>
-            <div class="impact-card">
-                <div class="impact-number">5000+</div>
-                <p>Daily Meals Served</p>
-            </div>
-            <div class="impact-card">
-                <div class="impact-number">24/7</div>
-                <p>Medical Emergency Support</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Bottom Action Bar -->
+    <!-- Old sections removed for cleaner design -->
     <div class="bottom-action-bar">
         <button class="action-box-btn action-donate-btn-bottom" data-modal="donate-modal">
             <span class="action-icon-box">🐄</span>
