--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,7 @@
             <nav class="navbar-menu">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="about.html" class="nav-link">About</a>
-                <a href="programs.html" class="nav-link">Programs</a>
-                <a href="gallery.html" class="nav-link">Gallery</a>
+                <a href="blog.html" class="nav-link">Blog</a>
                 <a href="contact.html" class="nav-link active">Contact</a>
                 <a href="donate.html" class="nav-donate">Donate Now</a>
             </nav>
